# embr-character-animation-engine

./: .hgignore  Building.md  EmbrScript.md  Installation.md  Overview.md  ProjectHome.md  README.md  text.txt
TRUNK/: CMakeLists.txt
TRUNK/SRC/: ActuatorFactory.cpp  ActuatorFactory.h  CMakeLists.txt  CPointer.h  Character.cpp  Character.h  EMBRLoggers.h  GestureModifier.cpp  GestureModifier.h  Parser.cpp  Parser.h  Realizer.cpp  Realizer.h  Scheduler.cpp  Scheduler.h  SchedulerManager.cpp  SchedulerManager.h  Skeleton.cpp  Skeleton.h  SocketListener.cpp  SocketListener.h  UDPListener.cpp  client.cpp  main.cpp  server.cpp
TRUNK/SRC/Actuators/: ActuatorAnimation.cpp  ActuatorAnimation.h  ActuatorAutonomousBehaviorParameter.cpp  ActuatorAutonomousBehaviorParameter.h  ActuatorCorrelationMap.cpp  ActuatorCorrelationMap.h  ActuatorGenericEMBR.cpp  ActuatorGenericEMBR.h  ActuatorHybridIKSlerp.cpp  ActuatorHybridIKSlerp.h  ActuatorIKSlerp.cpp  ActuatorIKSlerp.h  ActuatorMorphAnimation.cpp  ActuatorMorphAnimation.h  ActuatorMorphTarget.cpp  ActuatorMorphTarget.h  ActuatorShaderParameter.cpp  ActuatorShaderParameter.h  CMakeLists.txt  EMBRKinematicActuator.h  EMBRRealValuedActuator.h  UDPFeedbackSender.cpp  UDPFeedbackSender.h
TRUNK/SRC/MotionSegments/: AnimationMotionSegment.cpp  AnimationMotionSegment.h  CMakeLists.txt  ComplexMotionSegment.cpp  ComplexMotionSegment.h  CorrelationMap.cpp  CorrelationMap.h  MotionSegment.cpp  MotionSegment.h  MotionSequence.cpp  MotionSequence.h  RandomPostingMotionSegment.cpp  RandomPostingMotionSegment.h  SelfPostingMotionSegment.cpp  SelfPostingMotionSegment.h  UDPFeedbackSender.cpp  UDPFeedbackSender.h
TRUNK/SRC/pythonBindings/: Bindings.cpp  CMakeLists.txt
TRUNK/data/EMBRScripts/Alfonse/: box.embr  calm.embr  circle.embr  dontknow.embr  index.embr  init.embr  leno-0.embr  leno-1.embr  leno-2.embr  leno-3.embr  leno-4.embr  leno-5.embr  leno-6.embr  postures.embr  testAnim.embr  testAutonomousBehavior.embr  testInverseKinematics.embr  testLookAt.embr  testMorphTargets.embr  testRecordedPose.embr  testShader.embr  tree.embr  tripleclap.embr  wipe.embr
TRUNK/data/EMBRScripts/Amber/: box.embr  calm.embr  circle.embr  dontknow.embr  index.embr  leno-0.embr  leno-1.embr  leno-2.embr  leno-3.embr  leno-4.embr  leno-5.embr  leno-6.embr  postures.embr  testAnim.embr  testAutonomousBehavior.embr  testInverseKinematics.embr  testLookAt.embr  testMorphTargets.embr  testShader.embr  tree.embr  tripleclap.embr  wipe.embr
TRUNK/data/HeikeL/: faceGen-anim1.egg
TRUNK/data/HeikeL/textures/: face_eyeL_lo.tga  face_eyeR_lo.tga  face_skin_med.tga
TRUNK/data/alfonse/textures/: body_specular.tif
TRUNK/data/amber/: amber-anim1.egg  amber-breathing.egg  amber-catWalk.egg  amber-hands_claw.egg  amber-hands_fist.egg  amber-hands_index.egg  amber-hands_open-straight.egg  amber-hands_purse.egg  amber-hands_ring.egg  amber-hands_thumbUp.egg  amber-idle0.egg  amber-idle1.egg  amber-idle2.egg  amber-idle4.egg  amber-idle5.egg  amber-idle6.egg
TRUNK/data/amber/textures/: body_color.tif  body_specular.tif  eyebrows_color.tif  eyelashes_color.tif  eyes_color.tif  hair.tif  hair_ao.tif  head_ao.tif  head_color.tif  head_color1.tif  head_specular.tif  shoe_color.tga  shoe_color.tif  sphere.tga
TRUNK/data/lamp/: lamp.blend
TRUNK/data/models/alfonse/: alfonse.bam
TRUNK/data/models/alfonse/animations/: guy-breathing.bam  guy-hands_claw.bam  guy-hands_fist.bam  guy-hands_index.bam  guy-hands_open_relaxed.bam  guy-hands_open_spread.bam  guy-hands_open_straight.bam  guy-hands_purse.bam  guy-hands_ring.bam
TRUNK/data/models/alfonse/textures/: body_ao.tif  body_color.tif
TRUNK/data/models/alfonse/textures/body/: Thumbs.db
TRUNK/data/models/alfonse/textures/eyes/: Thumbs.db
TRUNK/data/models/alfonse/textures/hair/: Thumbs.db
TRUNK/data/models/alfonse/textures/head/: Thumbs.db
TRUNK/data/models/alfonse/textures/jacket/: Thumbs.db
TRUNK/data/models/alfonse/textures/trousers/: Thumbs.db
TRUNK/data/models/amber/: amber.bam  amberTransHair.bam
TRUNK/data/models/amber/animations/: amber-breathing.bam  amber-hands_ASL_1CL.bam  amber-hands_ASL_2CL.bam  amber-hands_ASL_3CL.bam  amber-hands_ASL_4CL.bam  amber-hands_ASL_5aCL.bam  amber-hands_ASL_5bCL.bam  amber-hands_ASL_ACL.bam  amber-hands_ASL_BCL.bam  amber-hands_ASL_CCL.bam  amber-hands_ASL_CbCL.bam  amber-hands_ASL_FCL.bam  amber-hands_ASL_G.bam  amber-hands_ASL_GCL.bam  amber-hands_ASL_ICL.bam  amber-hands_ASL_ILYCL.bam  amber-hands_ASL_M.bam  amber-hands_ASL_N.bam  amber-hands_ASL_SCL.bam  amber-hands_ASL_T.bam  amber-hands_ASL_TCL.bam  amber-hands_ASL_VaCL.bam  amber-hands_ASL_VbCL.bam  amber-hands_ASL_YCL.bam  amber-hands_DGS_A.bam  amber-hands_DGS_B.bam  amber-hands_DGS_C.bam  amber-hands_DGS_D.bam  amber-hands_DGS_E.bam  amber-hands_DGS_F.bam  amber-hands_DGS_G.bam  amber-hands_DGS_H.bam  amber-hands_DGS_I.bam  amber-hands_DGS_J.bam  amber-hands_DGS_K.bam  amber-hands_DGS_L.bam  amber-hands_DGS_M.bam  amber-hands_DGS_N.bam  amber-hands_DGS_O.bam  amber-hands_DGS_P.bam  (+20 more)
TRUNK/data/models/ground/: ground.bam
TRUNK/data/models/ground/textures/: groundShadow
TRUNK/data/models/lamp1/: lamp1.egg
TRUNK/data/models/lamp2/: lamp2.egg
TRUNK/data/models/lamp3/: lamp3.egg
TRUNK/data/shaders/: defaultFragmentShader.cg  defaultVertexShader.cg  eye.sha  generic.sha  hair.sha  head.sha  lighting.cg  ~body.sha  ~eye.sha  ~generic.sha  ~head.sha
TRUNK/data/shadersSimple/: body.sha  defaultFragmentShader.cg  defaultVertexShader.cg  eye.sha  generic.sha  hair.sha  head.sha  lighting.cg  ~body.sha  ~eye.sha  ~generic.sha  ~head.sha
TRUNK/data/textures/cubemaps/: README.txt
TRUNK/tests/: CMakeLists.txt
TRUNK/tests/testVFS/: CMakeLists.txt  main.cpp
